Make endpoint resource names plural
